--- a/package.json
+++ b/package.json
@@ -5,14 +5,20 @@
   "scripts": {
     "dev": "./node_modules/.bin/nodemon ./app.js",
     "linux:init": "chmod +x ./shell/*.sh && chmod +x ./scripts/*.sh",
-    "startpm2": "pm2 start app.js -i 1 --name webhook"
+    "startpm2": "pm2 start app.js -i 1 --name webhook",
+    "test": "./node_modules/.bin/mocha test/*.test.js"
   },
   "license": "MIT",
   "dependencies": {
-    "yf-fpm-server": "^2.4.12"
+    "babel-runtime": "^6.26.0",
+    "koa-views": "^6.1.5",
+    "lodash": "^4.17.11",
+    "nunjucks": "^3.1.6",
+    "yf-fpm-server": "^2.5.0"
   },
   "devDependencies": {
-    "babel-runtime": "^6.26.0",
+    "fpmc-jssdk": "^1.0.4",
+    "mocha": "^5.2.0",
     "nodemon": "^1.17.5"
   }
 }
