--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "MIT",
   "dependencies": {
     "babel-runtime": "^6.26.0",
+    "koa-static": "^5.0.0",
     "koa-views": "^6.1.5",
     "lodash": "^4.17.11",
     "nunjucks": "^3.1.6",
