--- a/package.json
+++ b/package.json
@@ -6,16 +6,21 @@
     "dev": "./node_modules/.bin/nodemon ./app.js",
     "linux:init": "chmod +x ./shell/*.sh && chmod +x ./scripts/*.sh",
     "startpm2": "pm2 start app.js -i 1 --name webhook",
+    "postinstall": "npm run cpy:public && npm run cpy:view",
+    "clean": "rm -rf public && mkdir public",
+    "cpy:public": "npm run clean && cp -r node_modules/ui.webhook.yunplus.io/build/* public/",
+    "cpy:view": "cpy node_modules/ui.webhook.yunplus.io/build/index.html views",
     "test": "./node_modules/.bin/mocha test/*.test.js"
   },
   "license": "MIT",
   "dependencies": {
     "babel-runtime": "^6.26.0",
+    "cpy-cli": "^2.0.0",
     "koa-static": "^5.0.0",
     "koa-views": "^6.1.5",
     "lodash": "^4.17.11",
     "nunjucks": "^3.1.6",
-    "ui.webhook.yunplus.io": "^0.1.0",
+    "ui.webhook.yunplus.io": "^0.1.3",
     "yf-fpm-server": "^2.5.0"
   },
   "devDependencies": {
