--- a/package.json
+++ b/package.json
@@ -3,22 +3,22 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "dev": "./node_modules/.bin/nodemon ./app.js",
+    "dev": "./node_modules/.bin/nodemon ./source/app.js",
     "linux:init": "chmod +x ./shell/*.sh && chmod +x ./scripts/*.sh",
     "startpm2": "pm2 start app.js -i 1 --name webhook",
     "test": "./node_modules/.bin/mocha test/*.test.js"
   },
   "license": "MIT",
   "dependencies": {
-    "babel-runtime": "^6.26.0",
+    "debug": "^4.1.1",
     "koa-static": "^5.0.0",
     "koa-views": "^6.1.5",
     "lodash": "^4.17.11",
     "ui.webhook.yunplus.io": "^0.1.3",
-    "yf-fpm-server": "^2.5.0"
+    "yf-fpm-server": "^2.6.1"
   },
   "devDependencies": {
-    "fpmc-jssdk": "^1.0.4",
+    "fpmc-jssdk": "^1.0.8",
     "mocha": "^5.2.0",
     "nodemon": "^1.17.5"
   }
