--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "./node_modules/.bin/nodemon ./source/app.js",
     "linux:init": "chmod +x ./shell/*.sh && chmod +x ./scripts/*.sh",
-    "startpm2": "pm2 start app.js -i 1 --name webhook",
+    "startpm2": "pm2 start ./source/app.js -i 1 --name webhook",
     "test": "./node_modules/.bin/mocha test/*.test.js"
   },
   "license": "MIT",
